# magic-deck-builder

./: .env.example  .gitignore  .mutmut-cache  AGENTS.md  NEXT-STEPS-AGENT-FRAMEWORK.md  README-COUNCIL.md  README.md  council.yaml  docker-compose.yml  pyproject.toml  vercel.json
.claude/: CLAUDE.md  settings.local.json
data/test/: commanders.json  golden_tasks.json  sample_cards.json
docs/: agent-contracts.md  deck-tailor-agent.md  deckbuilding-heuristics.md  discovery.md
docs/patterns/: api-fastapi-structure.md  architecture-multi-agent-council.md  data-local-text-vectorization.md  data-scryfall-ingestion.md  testing-pytest-structure.md  ui-two-level-zoom.md
src/: config.py
src/cli/: __main__.py  commands.py  main.py
src/database/: engine.py  models.py  models.py.bak  seed_roles.py
src/engine/: archetypes.py  brief.py  commander.py  context.py  deck_builder.py  evaluation.py  lands.py  llm_agent.py  metrics.py  observability.py  roles.py  selector.py  text_vectorizer.py  validator.py
src/ingestion/: bulk_ingest.py  scryfall_client.py
src/web/: app.py  schemas.py  serializers.py
tests/integration/: test_council_overrides.py  test_web_routes.py
tests/unit/: test_archetypes.py  test_bulk_ingest.py  test_commander.py  test_config.py  test_council_routing.py  test_council_voting.py  test_database.py  test_database_engine.py  test_evaluation.py  test_llm_agent.py  test_observability.py  test_scryfall_client.py  test_seed_roles.py  test_validator.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  styles.css
(+14 files in other folders)
