[project]
name = "magic-deck-builder"
version = "0.1.0"
description = "Commander (EDH) deck builder CLI"
authors = [{name = "Your Name"}]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "ijson>=3.2.0",
    "numpy>=1.24.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.92.0",
    "mutmut==2.4.4",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mutmut]
paths_to_mutate = ["src/engine"]
tests_dir = "tests/unit"
runner = "python3 -m pytest tests/unit"
